--- a/scss/main.scss
+++ b/scss/main.scss
@@ -5,6 +5,14 @@
     padding-left: $padLeft;
     padding-right: $padRight;
     padding-top:$padTop;
+    height:100%;
+}
+@mixin flex-container{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+
 }
 
 $primary-color:#304061;
@@ -24,22 +32,23 @@ body{
 a{
     text-decoration: none;
 }
+hr{
+    background-color: rgb(47, 64, 97);
+    height: 5px;
+    margin: 0;
+    padding: 0;
+}
+
+.container{
+    max-width: 75%;
+    margin: auto;
+    height: 100%;}
 
 .navbar{
     height: 77px;
     box-shadow: 0px 0px 20px #dfd3c7;
-    .container{
-        max-width: 75%;
-        margin: auto;
-        height: 100%;
         .flex-container{
-            width: 100%;
-            height: 100%;
-            display: flex;
-            align-items: center;
-            div{
-                height: 100%;
-                }
+            @include flex-container();
             .logo{
                 @include position(14.6px, 49.5px, 16px);
                 @include rightBorder();
@@ -84,7 +93,7 @@ a{
                 }
             }
             .nav-item-4{
-                @include position(32px, 43.5px, 29px);
+                @include position(32px, 43px, 29px);
                 a{
                     font-size: 16px;
                     color: $secondary-color;
@@ -127,14 +136,100 @@ a{
                 }
             }
         }
-    }
+    
 }
 
 .header{
     background: url("../images/header\ background.png")  bottom;
     background-size: cover;
-    min-height: 733px;
+    height: 733px;
+    .flex-container{
+        @include flex-container();
+        .header-item-1{
+            padding-left: 55px;
+            padding-bottom: 86px;
+            div{
+                padding-top: 19px;
+                text-align: end;
+            }
+        }
+        .header-item-2{
+            padding-left:183px;
+            padding-bottom: 122px;
+            letter-spacing: 1.7px;
+
+            .header-text{
+                padding-bottom: 22px;
+            }   
+            .header-title{
+                font-size: 80px;
+                color: rgb(48, 64, 97);
+                line-height: 1.1;
+                padding-bottom: 140px;
+                letter-spacing: 2px;
+            }
+            .explore-button{
+                border:none;
+                background-color:yellow;
+                color: rgb(48, 64, 97);
+                margin-left: 3.5px;
+                padding: 26.5px 39px 21.5px 50px ;
+                letter-spacing: 4.8px;
+                font-weight: bold;
+                font-size: 16px;
+            }
+            .slideshow-img{
+                max-width: 50px;
+            }
+
+        }
+    }
     h1{
         margin: 0;
     }
+}
+.filter-section{
+    display: grid;
+    grid-template-columns: repeat(6,1fr);
+    #search-bar{
+        grid-column: 1/span 6;
+
+    }
+}
+
+.collection{
+    .row{
+        display: grid;
+        grid-template-columns: repeat(9, 1fr);
+    }
+
+    p{
+        margin: 0;
+    }
+}
+
+.section-3{
+    display: grid;
+    grid-template-columns: auto auto;
+    .section3-container{
+        position: relative;
+        .section3-text1{
+            background-color: grey;
+            position: absolute;
+            top: 45%;
+            left: -10%;
+        }
+        .section3-text2{
+            background-color: grey;
+            position: absolute;
+            top: 45%;
+            right: -10%;
+        }
+    }
+}
+
+.grid-footer{
+    display: grid;
+    grid-template-columns: auto auto auto;
+    text-align: center;
 }
