--- a/scss/main.scss
+++ b/scss/main.scss
@@ -12,7 +12,6 @@
     height: 100%;
     display: flex;
     align-items: center;
-
 }
 
 $primary-color:#304061;
@@ -34,7 +33,8 @@ a{
 }
 hr{
     background-color: rgb(47, 64, 97);
-    height: 5px;
+    border:none;
+    height: 4px;
     margin: 0;
     padding: 0;
 }
@@ -43,6 +43,11 @@ hr{
     max-width: 75%;
     margin: auto;
     height: 100%;}
+#active-dot{
+    transform: scale(1.4);
+    color: #9f765a;
+    
+}
 
 .navbar{
     height: 77px;
@@ -140,96 +145,260 @@ hr{
 }
 
 .header{
-    background: url("../images/header\ background.png")  bottom;
+    background: url("../images/header\ background.png")  1px bottom ;
     background-size: cover;
-    height: 733px;
+    height: 732px;
     .flex-container{
         @include flex-container();
         .header-item-1{
-            padding-left: 55px;
+            padding-left: 58.5px;
             padding-bottom: 86px;
             div{
-                padding-top: 19px;
+                padding-top: 18.5px;
                 text-align: end;
+                i{
+                    color: #ddccb8;
+                    font-size:10px;
+                }
             }
         }
         .header-item-2{
             padding-left:183px;
             padding-bottom: 122px;
             letter-spacing: 1.7px;
+            position: relative;
+            height: 100%;
 
             .header-text{
-                padding-bottom: 22px;
+                padding:73px 0px 0px 3px;
+                letter-spacing: 1.35px;
+                color: #9f765a;
             }   
             .header-title{
                 font-size: 80px;
                 color: rgb(48, 64, 97);
                 line-height: 1.1;
-                padding-bottom: 140px;
-                letter-spacing: 2px;
+                padding:29px 0px 73.5px 1px;
+                letter-spacing: 1.35px;
             }
             .explore-button{
                 border:none;
-                background-color:yellow;
+                background-color:white;
                 color: rgb(48, 64, 97);
                 margin-left: 3.5px;
-                padding: 26.5px 39px 21.5px 50px ;
-                letter-spacing: 4.8px;
-                font-weight: bold;
-                font-size: 16px;
+                padding: 24.5px 39px 24px 50px ;
+                text-shadow: 0px 0px 0.5px rgb(48, 64, 97);
+                margin-right: 37px;
+                letter-spacing: 5.5px;
+                font-weight: 700;
+                font-size: 15px;
+                box-shadow: 1px 15px 40px #e6dcd3;
             }
-            .slideshow-img{
-                max-width: 50px;
+            .explore-text{
+                color: #9f765a;
+                font-size: 20px;
+                padding-bottom: 2px;
+                letter-spacing: 0;
             }
+            .explore-img{
+                padding-bottom: 3px;
+                padding-left: 10.5px;
+            }
+            .slideshow{
+                display: grid;
+                grid-template-columns: auto auto auto;
+                align-items: end;
+                position: absolute;
+                bottom: 0;
+                margin-left:3.5px;
+                .slideshow-btn1{
+                    padding:51px 48px 48px 49px;
+                    border:none;
+                    background-color: #ddccb8;
+                    margin:0;
 
+                }
+                .slideshow-btn2{
+                    padding: 51px 48px 48px 48px;
+                    border:none;
+                    background-color: white;
+                    margin:0;
+                }
+                .slideshow-img{
+                    background-color: white;
+                    padding: 21.85px 44px 19px 28px;
+                    img{
+                        width: 43px;
+                    }
+                }
+                .slideshow-img-btn{
+                    padding:20px 0px 0px 10px;
+                }
+            }
+        }
+        .header-item-3{
+            padding-left: 91px;
+            padding-bottom: 82px;
         }
     }
     h1{
         margin: 0;
     }
 }
+
+.filters{
+    background-color: #f5f1ee;
+}
 .filter-section{
     display: grid;
     grid-template-columns: repeat(6,1fr);
+
     #search-bar{
         grid-column: 1/span 6;
-
+        margin:32px 15px 19px 15px;
+        color: #ddccb8;
+        border:solid 1px #ddccb8;
+        padding:13px 0px 12px 18px;
+        box-shadow: inset 0px 0 10px 0px #f9f6f1;
+    }
+    #search-bar::placeholder{
+        color: #ddccb8;
+        font-size: 16px;
+    }
+    select{
+        border:solid 1px #ddccb8;
+        color: #b08b71;
+        font-size: 16px;
+        padding:10px 0px 11px 9px;
+        margin:0px 15px 30px 15px
+    }
+}
+.selected-filters{
+    padding:0;
+    display: grid;
+    grid-template-columns: 176px 176px 174px 187px auto auto auto auto;;
+    margin:24px 4px 0px 5px;
+    li{
+        list-style-type: none;
+        border:solid 1px #ddccb8;
+        border-radius: 25px;
+        display: grid;
+        grid-template-columns: 65% 35%;
+        align-items: center;
+        p{
+            padding:4px 0px 6px 20.5px;
+            font-size: 18px;
+            margin:0;
+            color: #b08b71;
+            letter-spacing: 0.5px;
+        }
+        .x-btn:after {
+            content:"\d7";
+            font-size:25px;
+            color: #b08b71;
+            cursor: pointer;
+        }
+    }
+    .selected-filters-item-1{
+        margin: 10px;
+        margin-right: 11px;
+    }
+    .selected-filters-item-2{
+        margin: 10px;
+        margin-right: 11px;
+    }
+    .selected-filters-item-3{
+        margin: 10px;
+        margin-left: 9px;
+    }
+    .selected-filters-item-4{
+        margin: 10px;
+        margin-left: 11px;
+        grid-template-columns: 67% 33%;
+        align-items: center;
     }
 }
 
 .collection{
-    .row{
-        display: grid;
-        grid-template-columns: repeat(9, 1fr);
-    }
-
-    p{
-        margin: 0;
+    padding-top:28px;
+    table{
+        width:97.95%;
+        height: 710px;
+        margin: auto;
+        border-collapse: collapse;
+        thead {
+            text-align: left;
+            tr{
+                border-bottom: 1px solid #dacdc4;
+                th{
+                    color: #75839d;
+                    padding-bottom: 12px;
+                }
+                .table-col1{
+                    width: 100px;
+                }
+            }
+        }
     }
 }
 
 .section-3{
     display: grid;
     grid-template-columns: auto auto;
+    .section3-img{
+        max-height: 633px;
+    }
     .section3-container{
         position: relative;
         .section3-text1{
-            background-color: grey;
+            padding:28px 40px 69.5px 89px;
+            width: 84.30%;
+            background-color: #f5f1ee;
             position: absolute;
-            top: 45%;
-            left: -10%;
+            top:12%;
+            left: -10.9%;
+            h1{
+                color: $secondary-color;
+                font-size: 60px;
+                letter-spacing: 2.8px;
+                padding-left: 5px;
+            }
+            p{
+                padding-top: 6px;
+                letter-spacing: 0.89px;
+                line-height: 1.81;
+                font-size: 17px;
+                color: $primary-color;
+            }
         }
         .section3-text2{
-            background-color: grey;
+            padding:27px 40px 67.75px 89px;
+            width: 84.30%;
+            background-color: #304061;
             position: absolute;
-            top: 45%;
-            right: -10%;
+            top:13.3%;
+            right: -10.9%;
+            h1{
+                color: white;
+                font-size: 60px;
+                letter-spacing: 2.8px;
+                padding-left: 1px;
+            }
+            p{
+                padding-top: 9px;
+                letter-spacing: 0.89px;
+                line-height: 1.81;
+                font-size: 17px;
+                color: white;
+            }
         }
     }
 }
 
 .grid-footer{
     display: grid;
-    grid-template-columns: auto auto auto;
+    grid-template-columns: repeat(3, 1fr);
+}
+.copyrights {
     text-align: center;
 }
