--- a/scss/main.scss
+++ b/scss/main.scss
@@ -60,9 +60,9 @@ hr{
                 a{
                     color: $primary-color;
                     font-family: "OpenSans"; 
+                    display: block;
                 }
                 .text-logo{
-                    padding-top: 16px;
                     font-size: 26px;
                     font-weight: bold;
                     letter-spacing: 11px;
@@ -321,9 +321,9 @@ hr{
 
 .collection{
     padding-top:28px;
+    min-height: 738px;
     table{
         width:97.95%;
-        height: 710px;
         margin: auto;
         border-collapse: collapse;
         thead {
@@ -333,13 +333,511 @@ hr{
                 th{
                     color: #75839d;
                     padding-bottom: 12px;
+                    letter-spacing: 0.25px;
                 }
                 .table-col1{
-                    width: 100px;
+                    width: 83.5px;
+                }
+                .table-col2{
+                    width:92px;
+                }
+                .table-col3{
+                    width: 308px;
+                }
+                .table-col4{
+                    width:246px;
+                }
+                .table-col5{
+                    width:174px;
+                }
+                .table-col6{
+                    width:193px;
+                }
+                .table-col7{
+                    width: 101px;
+                    padding-left:2px;
+                }
+                .table-col8{
+                    width: 160px;
+                }
+            }
+        }
+        tbody{
+            td{
+                color: #a6826a;
+            }
+            p{
+                margin:0;
+                padding-left:1px;
+            }
+            h3,h5{
+                margin:0;
+                color: $primary-color;
+                letter-spacing: 0.85px;
+                padding-left:0.5px
+            }
+            h5{
+                letter-spacing: 0.65px;
+            }
+            .low-stock{
+                height: 11px;
+                text-align: end;
+                font-size: 13px;
+                color: #d67419;
+                padding-right: 38px;
+                padding-top:8px;
+                font-weight: 700;
+                letter-spacing: -0.5px;
+                word-spacing: 0.3px;
+                i{
+                    padding-right: 3.5px;
+                    font-size: 14px;
+                }
+
+            }
+            .table-row1{
+                td{
+                    padding-bottom:4px;
+                }
+                td:first-child{
+                    padding-bottom: 5px;
+                    padding-left:34px
+                }
+                img{
+                    padding-top: 8px;
+                    padding-left:3px;
+                }
+                h3{
+
+                    padding-bottom: 3px;
+                }
+                h5{
+                    padding-left:1.5px;
+                    padding-top:7px;
+                }
+                .listing{
+                    padding-top:7px;
+                    padding-left: 1.5px;
+                    letter-spacing: 0.3px;
+                    font-size: 14px;
+                }
+                .wholesale{
+                    @extend .listing
+                }
+                .inc-dec-button{
+                    div{
+                        padding-top: 23px;
+                        padding-left:1px;
+                    }
+                    div:first-child{
+                        padding-top: 30px;
+                        padding-left:0px;
+                    }
+                }
+                td:nth-child(8){
+                    padding-left:10px;
+                    div:first-child{
+                        padding-top:4px;
+                        font-size: 13px;
+                        letter-spacing: -1px;
+
+                    }
+                }
+                td:nth-child(9){
+                    padding-top:7px;
+                    padding-left: 14px;
+                    font-size: 11.5px;
+                }
+
+            }
+            .table-row2{
+                @extend .table-row3;
+
+            }
+            .table-row3{
+                td{
+                    padding-bottom:4px;
+                }
+                td:first-child{
+                    padding-bottom: 9px;
+                    padding-left:34px
+                }
+                img{
+                    padding-top: 6px;
+                    padding-left:3px;
+                }
+                h3{
+
+                    padding-bottom: 3px;
+                }
+                .table-subtext{
+                    padding-bottom: 3px;
+                    padding-left: 0.5px;
+                }
+                h5{
+                    padding-left:1.5px;
+                    padding-top:6px;
+                }
+                .listing{
+                    padding-top:6px;
+                    padding-left: 1.5px;
+                    letter-spacing: 0.3px;
+                    font-size: 14px;
+                }
+                .wholesale{
+                    @extend .listing
+                }
+                .inc-dec-button{
+                    div{
+                        padding-top: 22px;
+                        padding-left:1px;
+                    }
+                    div:first-child{
+                        padding-top: 28px;
+                        padding-left:0px;
+                    }
+                }
+                td:nth-child(8){
+                    padding-left:10px;
+                    div:first-child{
+                        padding-top:3px;
+                        font-size: 13px;
+                        letter-spacing: -1px;
+
+                    }
+                }
+                td:nth-child(9){
+                    padding-top:5px;
+                    padding-left: 14px;
+                    font-size: 11.5px;
+                }
+
+            }
+            .table-row4{
+                td{
+                    padding-bottom:4px;
+                }
+                td:first-child{
+                    padding-top:10px;
+                    padding-left:34px
+                }
+                img{
+                    padding-top: 20px;
+                    padding-left:2px;
+                }
+                h3{
+                    padding-top:14px;
+                    padding-bottom: 3px;
+                }
+                .table-subtext{
+                    padding-bottom: 3px;
+                    padding-left: 0.5px;
+                }
+                h5{
+                    padding-left:1.5px;
+                    padding-top:20px;
+                }
+                .listing{
+                    padding-top:20px;
+                    padding-left: 1.5px;
+                    letter-spacing: 0.3px;
+                    font-size: 14px;
+                }
+                .wholesale{
+                    @extend .listing
+                }
+                .inc-dec-button{
+                    div{
+                        padding-top: 35px;
+                        padding-left:1px;
+                    }
+                    div:first-child{
+                        padding-top: 42px;
+                        padding-left:0px;
+                    }
+                }
+                td:nth-child(8){
+                    padding-left:10px;
+                    div:first-child{
+                        padding-top:16px;
+                        font-size: 13px;
+                        letter-spacing: -1px;
+
+                    }
+                }
+                td:nth-child(9){
+                    padding-top:18px;
+                    padding-left: 14px;
+                    font-size: 11.5px;
+                }
+            }
+            .table-row5{
+                @extend .table-row4;
+                img{
+                    padding-left:3px;
+                }
+            }
+            .table-row6{
+                td{
+                    padding-bottom:4px;
+                }
+                td:first-child{
+                    padding-top:9px;
+                    padding-left:34px
+                }
+                img{
+                    padding-top: 18px;
+                    padding-left:5px;
+                }
+                h3{
+                    padding-top:14px;
+                    padding-bottom: 3px;
+                }
+                .table-subtext{
+                    padding-bottom: 3px;
+                    padding-left: 0.5px;
+                }
+                h5{
+                    padding-left:1.5px;
+                    padding-top:19px;
+                    letter-spacing: 0.82px;
+                }
+                .listing{
+                    padding-top:19px;
+                    padding-left: 1.5px;
+                    letter-spacing: 0.3px;
+                    font-size: 14px;
+                }
+                .wholesale{
+                    @extend .listing
+                }
+                .inc-dec-button{
+                    div{
+                        padding-top: 35px;
+                        padding-left:1px;
+                    }
+                    div:first-child{
+                        padding-top: 42px;
+                        padding-left:0px;
+                    }
+                }
+                td:nth-child(8){
+                    padding-left:10px;
+                    div:first-child{
+                        padding-top:16px;
+                        font-size: 13px;
+                        letter-spacing: -1px;
+
+                    }
+                }
+                td:nth-child(9){
+                    padding-top:18px;
+                    padding-left: 14px;
+                    font-size: 11.5px;
+                }
+
+            }
+
+
+
+            .inc-dec-button{
+                    display: grid;
+                    grid-template-columns: 14% 86%;
+            }
+            .increase-btn{
+                border:none;
+                display: block;
+                background-color: rgba($color: white, $alpha: 0);
+                i{
+                    color: $secondary-color;
+                    font-size: 12px;
+                    cursor: pointer;
+                }
+
+            }
+            .decrease-btn{
+                @extend .increase-btn
+            }
+            .add-to-cart-button{
+                background-color: $primary-color;
+                color: white;
+                letter-spacing: 5.8px;
+                font-size: 15px;
+                font-weight: 700;
+                border:none;
+                padding:18px 22px 16px 30px;
+            }
+            .added-to-cart-button{
+                @extend .add-to-cart-button;
+                padding:17px 9px 17px 21px;
+                background-color: #546b95;
+                letter-spacing: 5.5px;
+                font-weight: 300;
+                i{
+                    padding-left: 4px;
                 }
             }
         }
     }
+}
+
+#marked-row{
+    border:1px solid #ddccb8;
+    border-bottom: none;
+    box-shadow: 0px -10px 20px #ddccb844;
+    td{
+        padding-bottom:4px;
+    }
+    td:first-child{
+        padding-left:33px;
+        i{
+            padding-bottom: 4px;
+        }
+    }
+    img{
+        padding-top: 20px;
+        padding-left:3px;
+        padding-bottom: 13px;
+    }
+    h3{
+        padding-bottom: 3px;
+    }
+    h5{
+        padding-left:1.5px;
+        padding-top:7px;
+        letter-spacing: 0.75px;
+    }
+    .listing{
+        padding-top:7px;
+        padding-left: 1.5px;
+        letter-spacing: 0.3px;
+        font-size: 14px;
+    }
+    .wholesale{
+        @extend .listing
+    }
+    .inc-dec-button{
+        div{
+            padding-top: 36px;
+            padding-left:1px;
+        }
+        div:first-child{
+            padding-top: 42px;
+            padding-left:0px;
+
+        }
+    }
+    td:nth-child(8){
+        padding-left:10px;
+        div:first-child{
+            padding-top:4px;
+            font-size: 13px;
+            letter-spacing: -1px;
+
+        }
+    }
+    td:nth-child(9){
+        padding-top:7px;
+        padding-left: 13.5px;
+        font-size: 11.5px;
+    }
+
+}
+#extra-info{
+    border:1px solid #ddccb8;
+    border-top: 1px solid rgb(228, 228, 228);
+    box-shadow: 0px 10px 20px #ddccb844;
+    font-size: 14px;
+    div{
+        color: #77829e;
+        align-items: center;
+        .show-color{
+            color: black;
+            font-size: 13px;
+        }
+    }
+    div:nth-child(2){
+        p{
+            padding-bottom: 4px;
+            padding-left:60px;
+            i{
+                padding-left: 4px;
+            }
+        }
+    }
+    div:nth-child(3){
+        p{
+            padding-bottom: 4px;
+            padding-left:9px;
+        }
+    }
+    div:nth-child(4){
+        p{
+            padding-bottom: 4px;
+            padding-left:3px;
+        }
+    }
+    div:nth-child(5){
+        p{
+            padding-bottom: 4px;
+            padding-left:11px;
+        }
+    }
+    div:nth-child(6){
+        button{
+            padding-bottom: 3px;
+            padding-left:145px;
+            i{
+                font-size: 15px;
+            }
+
+        }
+    }
+    .extra-info-parts{
+        display: grid;
+        grid-template-columns: 235.05px 241.72px 160px 320px auto auto;
+    }
+    .extra-info-links{
+        padding-top: 14px;
+        padding-bottom: 13px;
+        padding-left: 92px;
+        display: grid;
+        grid-template-columns: auto auto auto auto auto auto;
+        button{
+            max-width: 10px;
+            border: none;
+            background-color: white;
+            padding: 0;
+        }
+        button:nth-child(2){
+            padding-top:1px;
+            a{
+                padding-left:4px;
+            }
+        }
+        button:nth-child(3){
+            padding-top:1px;
+            a{
+                padding-left:7px;
+            }
+        }
+        button:nth-child(4){
+            padding-top: 1px;
+            a{
+                padding-left:10px;
+            }
+        }
+
+    }
+    .extra-info-external-link{
+        border: none;
+        background-color: white;
+        padding: 0;
+        a{
+            color: #936d56;
+        }
+    }
+
 }
 
 .section-3{
@@ -394,11 +892,67 @@ hr{
         }
     }
 }
+footer{
+    background-color: #f5f1ee;
+    padding-top: 90px;
+}
 
 .grid-footer{
     display: grid;
     grid-template-columns: repeat(3, 1fr);
+    h2{
+        font-family: "Georgia", serif;
+        color: $primary-color;
+        font-size: 28px;
+    }
+    .footer-item-1{
+        .footer-links{
+            padding-left: 168px;
+            letter-spacing: 9.1px;
+        }
+        div{
+            text-align: center;
+        }
+        .footer-links-item-1{
+            padding-right: 10px;
+            padding-top:21px;
+            a{
+                color: $primary-color;
+                font-size: 18px;
+                letter-spacing: 3.2px;
+            }
+         }
+         .footer-links-item-2{
+            padding-top: 17px;
+            padding-right: 8px;
+            a{
+                color:$secondary-color;
+                font-size:18px;
+                letter-spacing: 3.3px;
+            }
+         }
+         .footer-links-item-3{
+            padding-top: 22px;
+            padding-right: 13px;
+            a{
+                color:$primary-color;
+                font-size:16.5px;
+            }
+         }
+         .footer-links-item-4{
+            padding-top: 16px;
+            padding-right: 13px;
+            a{
+                color:$primary-color;
+                font-size: 16.2px;
+
+            }
+         }
+    }
+
 }
 .copyrights {
     text-align: center;
+    color: $primary-color;
 }
+
