--- a/scss/main.css
+++ b/scss/main.css
@@ -1044,21 +1044,33 @@ hr {
 }
 
 footer {
+  min-height: 500px;
   background-color: #f5f1ee;
-  padding-top: 90px;
+}
+
+.footer-top-line {
+  background-color: #ddccb8;
+  height: 10px;
+  width: 206px;
+  margin-left: 44.5%;
 }
 
 .grid-footer {
+  padding-top: 80px;
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: (1fr)[3];
-      grid-template-columns: repeat(3, 1fr);
+  -ms-grid-columns: 440px 16px 530px 14px 440px;
+      grid-template-columns: 440px 16px 530px 14px 440px;
 }
 
 .grid-footer h2 {
   font-family: "Georgia", serif;
   color: #304061;
   font-size: 28px;
+}
+
+.grid-footer .footer-item-1 {
+  padding-bottom: 42px;
 }
 
 .grid-footer .footer-item-1 .footer-links {
@@ -1068,6 +1080,7 @@ footer {
 
 .grid-footer .footer-item-1 div {
   text-align: center;
+  padding-left: 40px;
 }
 
 .grid-footer .footer-item-1 .footer-links-item-1 {
@@ -1110,6 +1123,95 @@ footer {
 .grid-footer .footer-item-1 .footer-links-item-4 a {
   color: #304061;
   font-size: 16.2px;
+}
+
+.grid-footer .footer-item-2 {
+  text-align: center;
+  color: #304061;
+}
+
+.grid-footer .footer-item-2 h2 {
+  padding-bottom: 43px;
+  letter-spacing: 8.9px;
+  padding-left: 6px;
+}
+
+.grid-footer .footer-item-2 p {
+  font-size: 16px;
+  margin: 0;
+  padding-bottom: 10px;
+  padding-right: 10.5px;
+  letter-spacing: 0.375px;
+}
+
+.grid-footer .footer-item-2 .footer-text2-1 {
+  padding-right: 14.5px;
+}
+
+.grid-footer .footer-item-2 .footer-text2-3 {
+  padding-right: 10.5px;
+  padding-top: 1px;
+  font-size: 16px;
+  letter-spacing: 0px;
+}
+
+.grid-footer .footer-item-2 span {
+  position: relative;
+  padding-right: 8px;
+}
+
+.grid-footer .footer-item-2 .th {
+  font-size: 10px;
+  position: absolute;
+  top: 10%;
+  right: -20%;
+}
+
+.grid-footer .footer-item-3 h2 {
+  padding-left: 58px;
+  letter-spacing: 8.85px;
+  padding-bottom: 66px;
+}
+
+.grid-footer .footer-item-3 .footer-button {
+  width: 326px;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 10% 70% 20%;
+      grid-template-columns: 10% 70% 20%;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  border: 1px solid #d9d9d9;
+  font-size: 16px;
+  margin-left: 42px;
+  padding-top: 25px;
+  padding-left: 27px;
+  padding-bottom: 27px;
+}
+
+.grid-footer .footer-item-3 .footer-button img {
+  padding-left: 3px;
+}
+
+.grid-footer .footer-item-3 .footer-button span {
+  padding-bottom: 2px;
+  padding-left: 33px;
+  letter-spacing: 1.65px;
+}
+
+.grid-footer .footer-item-3 .footer-button .footer-right-arrow {
+  padding-left: 18px;
+}
+
+.grid-footer .footer-line-1 {
+  border-right: 1px solid #ddccb8;
+  margin-top: 39px;
+}
+
+.grid-footer .footer-line-2 {
+  border-left: 1px solid #ddccb8;
+  margin-top: 39px;
 }
 
 .copyrights {
