--- a/scss/main.scss
+++ b/scss/main.scss
@@ -893,25 +893,35 @@ hr{
     }
 }
 footer{
+    min-height: 500px;
     background-color: #f5f1ee;
-    padding-top: 90px;
+    
 }
-
+.footer-top-line{
+    background-color:#ddccb8;
+    height: 10px;
+    width: 206px;
+    margin-left: 44.5%;
+    
+}
 .grid-footer{
+    padding-top: 80px;
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: 440px 16px 530px 14px 440px;
     h2{
         font-family: "Georgia", serif;
         color: $primary-color;
         font-size: 28px;
     }
     .footer-item-1{
+        padding-bottom: 42px;
         .footer-links{
             padding-left: 168px;
             letter-spacing: 9.1px;
         }
         div{
             text-align: center;
+            padding-left:40px;
         }
         .footer-links-item-1{
             padding-right: 10px;
@@ -949,10 +959,88 @@ footer{
             }
          }
     }
+    .footer-item-2{
+        text-align: center;
+        color: $primary-color;
+        h2{
+            padding-bottom: 43px;
+            letter-spacing: 8.9px;
+            padding-left: 6px;
+        }
+        p{
+            font-size: 16px;
+            margin:0;
+            padding-bottom: 10px;
+            padding-right: 10.5px;
+            letter-spacing: 0.375px;
+        }
+        .footer-text2-1{
+            padding-right: 14.5px;
+        }
+        .footer-text2-3{
+            padding-right: 10.5px;
+            padding-top:1px;
+            font-size: 16px;
+            letter-spacing: 0px;
+        }
+
+        span{
+            position: relative;
+            padding-right: 8px;
+        }
+        .th{
+            font-size: 10px;
+            position: absolute;
+            top: 10%;
+            right: -20%;
+        }
+    }
+    .footer-item-3{
+        h2{
+            padding-left:58px;
+            letter-spacing: 8.85px;
+            padding-bottom: 66px;
+        }
+        .footer-button{
+            width: 326px;
+            display: grid;
+            grid-template-columns: 10% 70% 20%;
+            align-items: center;
+            border:1px solid #d9d9d9;
+            font-size: 16px;
+            margin-left: 42px;
+            padding-top:25px;
+            padding-left: 27px;
+            padding-bottom: 27px;
+
+            img{
+                padding-left:3px;
+            }
+            span{
+                padding-bottom: 2px;
+                padding-left: 33px;
+                letter-spacing: 1.65px;
+            }
+            .footer-right-arrow{
+                padding-left:18px;
+            }
+        }
+    }
+    .footer-line-1{
+        border-right: 1px solid #ddccb8;
+        margin-top:39px;
+    }
+    .footer-line-2{
+        border-left: 1px solid #ddccb8;
+        margin-top:39px;
+    }
 
 }
 .copyrights {
     text-align: center;
     color: $primary-color;
+    i{
+
+    }
 }
 
